--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ channels-redis==2.4.2
 constantly==15.1.0
 cryptography==2.9.2
 daphne==2.5.0
-Django==3.0.7
+Django==3.0.6
 djangorestframework==3.11.0
 hiredis==1.0.1
 hyperlink==19.0.0
@@ -29,4 +29,5 @@ six==1.15.0
 sqlparse==0.3.1
 Twisted==20.3.0
 txaio==20.4.1
+whitenoise==5.1.0
 zope.interface==5.1.0
