--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,19 @@ async-timeout==3.0.1
 attrs==19.3.0
 autobahn==20.4.3
 Automat==20.2.0
+azure-common==1.1.25
+azure-storage-blob==2.1.0
+azure-storage-common==2.1.0
+certifi==2020.4.5.2
 cffi==1.14.0
 channels==2.4.0
 channels-redis==2.4.2
+chardet==3.0.4
 constantly==15.1.0
 cryptography==2.9.2
 daphne==2.5.0
 Django==3.0.7
+django-storages==1.9.1
 djangorestframework==3.11.0
 hiredis==1.0.1
 hyperlink==19.0.0
@@ -23,11 +29,14 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 PyHamcrest==2.0.2
 pyOpenSSL==19.1.0
+python-dateutil==2.8.1
 pytz==2020.1
+requests==2.23.0
 service-identity==18.1.0
 six==1.15.0
 sqlparse==0.3.1
 Twisted==20.3.0
 txaio==20.4.1
+urllib3==1.25.9
 whitenoise==5.1.0
 zope.interface==5.1.0
